<resources>
    <string name="app_name" translatable="false">AlfaBet_0.1</string>
    <string name="help_back_text">Back</string>
    <string name="help_text">Help</string>
    <string name="help_text_park">After clicking, a label will appear with which you can make parking. Also, you can leave notes or photos.</string>
    <string name="help_text_car">After parking the car, you can look at the note that you left.</string>
    <string name="help_text_gps">Click to determine your position.</string>
    <string name="help_text_compass">Click to plot a route from you to the car.</string>
    <string name="help_get_permission_next">Next</string>
    <string name="settings_button_history">History</string>
    <string name="permission_camera_warning">The camera is not available. There is no way to use the camera to create a photo.\n</string>
    <string name="permission_location_warning">Current geolocation is not available.</string>
    <string name="settings_theme_switch_light">Theme: Light</string>
    <string name="settings_theme_switch_dark">Theme: Dark</string>
    <string name="help_text_permission_description">To use all the functionality of the application, allow access to geolocation and camera.</string>
    <string name="first_launch">First launch</string>
    <string name="description">Description</string>
    <string name="help_get_permission_start">Start</string>
    <string name="apply_changes">Apply changes</string>
    <string name="functional_is_limited_text">The functionality is limited.</string>
    <string name="parking_information">Parking Information</string>
    <string name="toast_camera_perm">Allow using the camera in the settings</string>
    <string name="Geolocation_is_disabled">Geolocation is disabled</string>
    <string name="Enable_geolocation_text">Enable geolocation in your phone settings so that the app will show your location</string>
    <string name="empty">Empty</string>
    <string name="save">Save</string>
    <string name="address">Address</string>
    <string name="beginning">Beginning</string>
    <string name="end">End</string>
    <string name="note">Note</string>
    <string name="photo">Photo</string>
    <string name="location_on_the_map">Location on the map</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="language">Language</string>
    <string name="en">English</string>
    <!-- The action for submitting a form. This text is on a button that can fit 30 chars -->
    <string name="ru">Russian</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="clear_history_alert">Clear parking history?</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="settings_toast">Changes will take effect after restarting</string>
    <string name="help_big_text">When parking:\n
  →  Determine which entrance you came from and roughly estimate the distance from it\n
  →  If there is a detailed drawing of the parking lot/shopping center where you are located on the maps, use reference points (for example, entrances/exits from the parking lot/ shopping center where you are located) to put a marker with high accuracy\n
  →  If the parking lot uses the marking of places, write down/take a picture of the number of the place where you parked your car\n
  →  When photographing a car, try to capture the reference points\n
  →  When writing a note, do not forget to specify the floor where the car is located and the time of entry to the parking lot, if it is paid\n
\n
When searching for a car:\n
  →  Try to follow the same path to the car as you left it\n
  →  If there is a marking of places in the parking lot, use it: standing at the nearest marker, find any marker that is diagonally away from you (one place forward and one place to the side) - so you will understand which way you need to move to find your car\n
  →  If geolocation services are not working well in your parking lot, do not rely on an automatically built route - it can confuse you</string>
</resources>