<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainConstrLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_background"
    tools:context=".ParkingExtendedActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backConstrLayout"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:clickable="true"
        android:onClick="onClickBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBackArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_backarrow" />

        <TextView
            android:id="@+id/textViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/help_back_text"
            android:textColor="@color/text_color"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgBackArrow"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:nestedScrollingEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="26dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="13dp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/button_color"
                app:cardCornerRadius="15dp">

                <TextView
                    android:id="@+id/textViewAdress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginEnd="16dp"
                    android:text="Улица Пушкина, дом Колотушкина"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|left"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/address"
                    android:textColor="@color/text_color" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="26dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="13dp"
                app:cardBackgroundColor="@color/button_color"
                app:cardCornerRadius="15dp">

                <TextView
                    android:id="@+id/textViewBeginning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginEnd="16dp"
                    android:text="text"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|left"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/beginning"
                    android:textColor="@color/text_color" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="26dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="13dp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/button_color"
                app:cardCornerRadius="15dp">

                <TextView
                    android:id="@+id/textViewEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginEnd="16dp"
                    android:text="text"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|left"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/end"
                    android:textColor="@color/text_color" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="26dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="13dp"
                app:cardBackgroundColor="@color/button_color"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|left"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/note"
                        android:textColor="@color/text_color" />

                    <TextView
                        android:id="@+id/textViewNote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:gravity="right"
                        android:text="text"
                        android:textColor="@color/text_color" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewPhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="26dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="13dp"
                app:cardBackgroundColor="@color/button_color"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|left"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/photo"
                        android:textColor="@color/text_color" />

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="250dp"
                        android:layout_height="300dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        app:srcCompat="@drawable/img_default_photo" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="26dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="13dp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/button_color"
                app:cardCornerRadius="15dp">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|left"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/location_on_the_map"
                    android:textColor="@color/text_color" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="26dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="13dp"
                app:cardBackgroundColor="@color/button_color"
                app:cardCornerRadius="15dp">

                <TextView
                    android:id="@+id/textViewLatitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginEnd="16dp"
                    android:text="text"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|left"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/latitude"
                    android:textColor="@color/text_color" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="26dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="13dp"
                app:cardBackgroundColor="@color/button_color"
                app:cardCornerRadius="15dp">

                <TextView
                    android:id="@+id/textViewLongitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginEnd="16dp"
                    android:text="text"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|left"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/longitude"
                    android:textColor="@color/text_color" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/parking_information"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backConstrLayout" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/backConstrLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backConstrLayout"
        app:srcCompat="@drawable/img_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>